# lust

./: .gitignore  Index.md  LICENSE  MR2.md  README.md  Readme.md  agent.py  agentV2.py  agentV3.py  agent_test.py  heuristics.py  main-opposite.py  main.py  main02.py  mainV2.py  make_actions.py  make_annotations.py  model.drawio  run.py  tdlamda.drawio  vtrace.drawio
_main__vs___main/: 0_12.json  0_16.json  0_32.json  1_12.json
agents/: research.py
agents/finder/: city_tiles.py  convexhull.py
cagd/: Readme.md  data.ps  decas.ps  test.c  test.h
cfd-in-prac/: Readme.md
cfd-in-prac/src/: CMakeLists.txt  defs.h  getNumberBoundNodes.cpp  main.cpp  output.h  outputSurfaces.cpp  solver.h  spaceDiscr.h  streamIO.h  timeDiscr.h  userInput.cpp  userInput.h
cfd-in-prac/src/bcond/: bndConds.h
cfd-in-prac/src/geo/: readGrid.cpp
cfd-in-prac/src/solver/: solver.h  writeSolution.cpp
cfd-in-prac/src/spacedisc/: gradients.cpp  gradientsVisc.cpp
cfd-in-prac/test/src/: outputConvergence.cpp  outputFlowfield.cpp
circuit/: ReadMe.md
conf/: base.py  continuation_config.yaml  conv_config.yaml  conv_phase1_shaped_reward.yaml  conv_phase2_game_result.yaml  conv_phase3_small_teacher.yaml  conv_phase4_small_teacher.yaml  conv_phase5+_final_model.yaml
games101/: Readme.md
games101/01/src/: Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
games101/02/src/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
games101/03-test/src/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp
games101/03-test2/src/: main.cpp  rasterizer.cpp  rasterizer.hpp
games101/03/src/: CMakeLists.txt  OBJ_Loader.h  Shader.hpp  Texture.hpp  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
lux/: game.py  game_map.py  game_objects.py
lux_ai/: utility_constants.py  utils.py
lux_ai/handcrafted_agents/: actions.py  duties.py  map_processing.py  needs_name_v0.py
lux_ai/lux/: annotate.py  constants.py  game.py  game_map.py  game_objects.py
lux_ai/lux_gym/: __init__.py  act_spaces.py  lux_env.py  multi_subtask.py  obs_spaces.py  reward_spaces.py  wrappers.py
lux_ai/nns/: __init__.py  attn_blocks.py  conv_blocks.py  in_blocks.py  models.py  weight_init.py
lux_ai/rl_agent/: config.yaml  data_augmentation.py  rl_agent.py  rl_agent_config.yaml
lux_ai/torchbeast/: monobeast.py
lux_ai/torchbeast/core/: buffer_utils.py  prof.py  td_lambda.py  upgo.py  vtrace.py
mytest/: spawn.py
outputs/02-22/11-25-13/: config.yaml
outputs/02-22/11-25-13/.hydra/: config.yaml  hydra.yaml
replays/: replay.json
test_boost/src/: CMakeLists.txt  ENV.cmake  main.cpp
test_boost_geo/src/: CMakeLists.txt  main.cpp  simple.cpp  spatial_index.cpp  topology.cpp
test_cgal/src/: CMakeLists.txt  ENV.cmake  MyConstruct_bbox_2.h  MyConstruct_coord_iterator.h  MyConstruct_point_2.h  MyKernel.h  MyPointC2.h  MyPointC2_iostream.h  MySegmentC2.h  draw_arrangment.cpp  kernel.cpp  simple.cpp  surface_mesh.cpp  triangular.cpp  triangular2d.cpp
test_cgal_mesh/src/: 3d_triangle.cpp  CMakeLists.txt  simple.cpp
test_spline/src/: Bezier.cpp  Bezier.h  CMakeLists.txt  Curve.cpp  Curve.h  ENV.cmake  Vector.h  bezier.cpp
test_triangle/: Readme.md
test_triangle/include/: delaunay.h  edge.h  numeric.h  triangle.h  vector2.h
test_triangle/src/: BowyerWatson.cpp  CMakeLists.txt  bezier.cpp  delaunay.cpp  main.cpp  topk_navie.cpp
vim_test/: CMakeLists.txt  simple.cpp
